...

    fun confirmLogout() {
        val button1Action = {
            dialogFlow.value = null
            logout()
        }
        val button1 = Pair("Yes", button1Action)
        val button2Action = { dialogFlow.value = null }
        val button2 = Pair("Cancel", button2Action)
        val dialog = DialogData(
            title = "Are you sure you want to logout?",
            button1 = button1,
            button2 = button2
...
