...
        val developerMenuItem = MenuData(
            name = "Developer",
            action = { goToDeveloper() },
            iconResourceId = R.drawable.builder
        )
        val logOutMenuItem = MenuData(
            name = "Log out",
            action = { logout() },
            iconResourceId = R.drawable.ic_logout
        )

        //debug
        val ciInfoItem = MenuData(
...
